# ai-core-tools

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CLIENT_LICENSE_AGREEMENT.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONFIGURE_QDRANT.md  CONTRIBUTING.md  Dockerfile  Jenkinsfile  LICENSE  LICENSING.md  README.md  SECURITY.md  STABILITY_IMPROVEMENTS.md  TESTING.md  alembic.ini  app.py  aritz  azure_ai_README.md  azure_ai_env.example  azure_ai_requirements.txt  azure_ai_script.py  docker-compose-dockerhub.yaml  docker-compose-qdrant.yaml  docker-compose.yaml  env.example  openapi_schema.json  pyproject.toml  pyrightconfig.json  pytest.ini  sonar-project.properties  test_azure_connection.py  test_mistral_agent.py  version-bumper.Dockerfile
.github/: AI-DEV-INFO.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/agents/: ai-dev-architect.agent.md  alembic-expert.agent.md  backend-expert.agent.md  conductor.agent.md  docs-manager.agent.md  feature-planner.agent.md  git-github.agent.md  oss-manager.agent.md  plan-executor.agent.md  react-expert.agent.md  release-manager.agent.md  test-expert.agent.md  test.agent.md  version-bumper.agent.md  website-maintainer.agent.md
.github/instructions/: .alembic.instructions.md  .docs.instructions.md  .gh-commit.instructions.md  .gh-issues.instructions.md  .git-github.instructions.md  .handoff.instructions.md  .plan-extensions.instructions.md
.github/skills/: commit-and-push.skill.md  git-github.skill.md  new-agent.skill.md  new-instruction.skill.md  new-skill.skill.md
.github/workflows/: backend-ci.yml  frontend-ci.yml  test.yaml
alembic/: _4641a61506b4_added_type_to_silo.py  env.py
alembic/versions/: 06aaf1a6f0fe_linked_repos_and_silos.py  08001655fb7e_add_marketplace_usage_tracking_table.py  0c9bd45273ec_bind_ai_and_embedding_services_to_apps.py  11d7dca1ab9c_remove_unused_auth_fields_from_mcp_.py  125b5f2e52be_merge_openai_api_head_with_saas003.py  14b4c9c42164_merge_feature_and_saas_branches.py  1cd057577c6e_added_login_and_register_with_email_and_.py  2523d3e13423_vector_db_type_field_added_to_silo_model.py  3328c4012e93_add_administrator_role_to_collaboration.py  338def34f339_add_media_and_mediachunk_tables.py  372d11cf29a7_added_mistralembeddings.py  3d568387b418_simplify_mcp_config_structure.py  3e9d370bd29b_delete_media_chunk_table.py  42c2b73b86da_remove_subscription_tables.py  483826553cd5_added_langsmith_to_app.py  489c8afcff5b_ia_core_tools_2.py  48aea27275aa_domains_and_urls.py  4b456a21f90b_add_folder_table_and_resource_folder_id.py  4d2049cddf25_merge_migration_heads.py  4efb28492fea_created_mcp_config_entity.py  5335c57f74cd_add_system_settings_table.py  5706422a57c2_added_agent_rate_limit_to_app_model.py  59e8d529b38a_initial_models.py  5cc4c107ece8_added_type_to_silo.py  5d392cc2e23f_embedding_services_relations_with_repos_.py  651adc60ad22_add_ai_service_id_column_to_media_table.py  6eddec222813_add_auth_fields_to_mcp_config.py  7001831172b8_add_max_file_size_mb_to_app_model.py  76f37ab0ce9e_1_to_n_relation_agent_to_mcps.py  7e27609b5faf_correct_provider_attr.py  7ec8cfef5243_add_subscription_models_proper.py  7fa5273b160e_binding_agent_to_silo_instead_of_repo.py  84c0512e901d_added_request_count_to_agents.py  84e218bbc5c5_add_unique_constraint_on_resource_repo_.py  85ae9de23cef_merging_agents.py  881e4ca78388_merge_migration_heads.py  8fe20813a159_add_temperature_to_agent.py  986475e9f1f5_descriptions_for_agent_tool_relationship.py  986e6729e99d_agents_with_tools_and_toolable_agents.py  9878217d10f4_add_subscription_models.py  (+48 more)
api/: api.py
app/: Dockerfile  app.py  extensions.py  index.html  requirements.txt
app/agents/: ocrAgent.py
app/api/: api.py  api_auth.py  repository_api.py  resource_api.py  silo_api.py
app/blueprints/: agents.py  ai_services.py  api_keys.py  app_settings.py  auth.py  collaboration.py  crawler.py  domains.py  embeddings_services.py  mcp_configs.py  models.py  output_parsers.py  public.py  repositories.py  silos.py  subscription.py
app/db/: base.py  base_class.py
app/model/: __init__.py  agent.py  ai_service.py  api_key.py  api_usage.py  app.py  app_collaborator.py  base_service.py  domain.py  embedding_service.py  mcp_config.py  (+9 more)
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.test  README.md  config.py  deployment_mode.py  env.example  main.py  requirements-qdrant.txt  requirements.txt  system_defaults.yaml  test_basic_services.py  test_unified_services.py  test_users.py
docker/: .env.example  Caddyfile  README.md  docker-compose.yaml
docs/: .doc-metadata.yaml  ADMIN_FUNCTIONALITY.md  ATTACHMENT_API_USAGE.md  CONFIGURE_QDRANT.md  DECORATORS_USAGE.md  EXPORT_IMPORT_INCONSISTENCIES.md  EXTERNAL_MCP_SETUP.md  LICENSE.md  MEDIA_INGESTION.md  README.md  REFACTORING_SUMMARY.md  STABILITY_IMPROVEMENTS.md  VERSION_BUMPER.md  Video-RAG.md  dev-guide.md  index.md
frontend/: .dockerignore  .env.example  .env.production  .npmignore  Dockerfile  README.md  eslint.config.js  example-usage.tsx  generate-config.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.build.json  vite.config.ts
kubernetes/: README.md
model/: __init__.py  agent.py  app.py  repository.py  resource.py
nginx/: nginx.conf
notebooks/: 00-index-file.ipynb  01-milvus.ipynb  02-conversational-retrie.ipynb  03-silos.ipynb  04-agent-with-tools.ipynb  06-mcp-server.ipynb  07-reactAgent.ipynb  agent_coordinator.py  mcp-server.py  o5-ollama-cals.ipynb
scripts/: demo-app.json  test.sh  test_openai_api.py  test_openai_client.py  test_openai_suite.py  test_openai_vision.py
templates/: app_index.html  footer.html  header.html  index.html
tests/: __init__.py  conftest.py  factories.py  test_api.py  test_api_curl.sh  test_api_session.py  test_multimodal_public.py  test_refactored_api.py  test_signed_url.py  test_stability_improvements.py  test_unique_logging.py
tools/: milvusTools.py  modelTools.py
views/: agents.py  repositories.py
(+872 files in other folders)
