[tool.poetry]
name = "ai-core-tools"
version = "0.2.19"
description = "Mattin AI by LKS Next is a tool to aid and complement other software projects with AI capabilities."
authors = ["Aritz Galdos", "Mikel Lonbide"]
readme = "docs/README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
flask = ">=3.1.0,<4.0.0"
flask-restful = ">=0.3.10,<0.4.0"
flask-session = ">=0.8.0,<0.9.0"
flask-login = ">=0.6.3,<0.7.0"
flask-sqlalchemy = ">=3.1.1,<4.0.0"
python-dotenv = ">=1.0.1,<2.0.0"
psycopg = ">=3.2.9,<4.0.0"
psycopg2-binary = ">=2.9.0,<3.0.0"
langchain-openai = ">=0.3.2,<0.4.0"
langchain = ">=0.3.16,<0.4.0"
pdf2image = ">=1.17.0,<2.0.0"
pypdf = ">=5.2.0,<6.0.0"
langchain-anthropic = ">=0.3.4,<0.4.0"
langchain-community = ">=0.3.15,<0.4.0"
langchain-postgres = ">=0.0.13,<0.1.0"
authlib = ">=1.4.0,<2.0.0"
deprecation = ">=2.1.0,<3.0.0"
flask-openapi3 = ">=4.0.3,<5.0.0"
langchain-mistralai = ">=0.2.6,<0.3.0"
mistralai = ">=1.5.0,<2.0.0"
flask-paginate = ">=2024.4.12,<2025.0.0"
beautifulsoup4 = ">=4.13.3,<5.0.0"
langchain-ollama = ">=0.2.3,<0.3.0"
langchain-mcp-adapters = ">=0.0.8,<0.0.9"
toml = ">=0.10.2,<0.11.0"
langgraph = ">=0.4.10,<0.5.0"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"
SQLAlchemy = ">=2.0.42,<3.0.0"
alembic = ">=1.16.4,<2.0.0"
psycopg-binary = ">=3.2.9,<4.0.0"
psycopg-pool = ">=3.2.6,<4.0.0"
pydantic = ">=2.11.7,<3.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"
orjson = ">=3.11.1,<4.0.0"
aiohttp = ">=3.12.15,<4.0.0"
httpx = ">=0.28.1,<0.29.0"
starlette = ">=0.47.2,<0.48.0"
sse-starlette = ">=3.0.2,<4.0.0"
pyjwt = ">=2.8.0,<3.0.0"
langchain-azure-ai = ">=0.1.5,<0.2.0"
python-multipart = ">=0.0.6,<0.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
