[tool.poetry]
name = "ai-core-tools"
version = "0.2.23"
description = "Mattin AI by LKS Next is a tool to aid and complement other software projects with AI capabilities."
authors = ["Aritz Galdos", "Mikel Lonbide"]
readme = "docs/README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
flask = ">=3.1.0,<4.0.0"
flask-restful = ">=0.3.10,<0.4.0"
flask-session = ">=0.8.0,<0.9.0"
flask-login = ">=0.6.3,<0.7.0"
flask-sqlalchemy = ">=3.1.1,<4.0.0"
python-dotenv = ">=1.0.1,<2.0.0"
psycopg = ">=3.2.9,<4.0.0"
psycopg2-binary = ">=2.9.0,<3.0.0"
langchain-openai = ">=0.3.2,<0.4.0"
langchain = ">=0.3.16,<0.4.0"
pdf2image = ">=1.17.0,<2.0.0"
pypdf = ">=5.2.0,<6.0.0"
langchain-anthropic = ">=0.3.4,<0.4.0"
langchain-community = ">=0.3.15,<0.4.0"
langchain-postgres = ">=0.0.13,<0.1.0"
authlib = ">=1.4.0,<2.0.0"
deprecation = ">=2.1.0,<3.0.0"
flask-openapi3 = ">=4.0.3,<5.0.0"
langchain-mistralai = ">=0.2.6,<0.3.0"
mistralai = ">=1.5.0,<2.0.0"
flask-paginate = ">=2024.4.12,<2025.0.0"
beautifulsoup4 = ">=4.13.3,<5.0.0"
langchain-ollama = ">=0.2.3,<0.3.0"
langchain-mcp-adapters = ">=0.0.8,<0.0.9"
toml = ">=0.10.2,<0.11.0"
langgraph = "==0.6.3"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"
SQLAlchemy = ">=2.0.42,<3.0.0"
alembic = ">=1.16.4,<2.0.0"
psycopg-binary = ">=3.2.9,<4.0.0"
psycopg-pool = ">=3.2.6,<4.0.0"
pydantic = ">=2.11.7,<3.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"
orjson = ">=3.11.1,<4.0.0"
aiohttp = ">=3.12.15,<4.0.0"
httpx = ">=0.28.1,<0.29.0"
starlette = ">=0.47.2,<0.48.0"
sse-starlette = ">=3.0.2,<4.0.0"
pyjwt = ">=2.8.0,<3.0.0"
langchain-azure-ai = ">=0.1.5,<0.2.0"
python-multipart = ">=0.0.6,<0.1.0"
aiohappyeyeballs = ">=2.6.1,<3.0.0"
aiosignal = ">=1.4.0,<2.0.0"
amqp = ">=5.3.1,<6.0.0"
annotated-types = ">=0.7.0,<1.0.0"
anthropic = ">=0.61.0,<1.0.0"
anyio = ">=4.10.0,<5.0.0"
asyncpg = ">=0.30.0,<1.0.0"
attrs = ">=25.3.0,<26.0.0"
azure-ai-agents = ">=1.1.0,<2.0.0"
azure-ai-inference = ">=1.0.0b9,<2.0.0"
azure-ai-projects = ">=1.0.0b12,<2.0.0"
azure-common = ">=1.1.28,<2.0.0"
azure-core = ">=1.35.0,<2.0.0"
azure-core-tracing-opentelemetry = ">=1.0.0b12,<2.0.0"
azure-cosmos = ">=4.14.0b1,<5.0.0"
azure-identity = ">=1.23.1,<2.0.0"
azure-search-documents = ">=11.5.3,<12.0.0"
azure-storage-blob = ">=12.26.0,<13.0.0"
bcrypt = ">=4.3.0,<5.0.0"
blinker = ">=1.9.0,<2.0.0"
bs4 = ">=0.0.2,<1.0.0"
cachetools = ">=6.1.0,<7.0.0"
certifi = ">=2025.8.3,<2026.0.0"
cffi = ">=1.17.1,<2.0.0"
charset-normalizer = ">=3.4.2,<4.0.0"
click = ">=8.2.1,<9.0.0"
colorama = ">=0.4.6,<1.0.0"
croniter = ">=6.0.0,<7.0.0"
cryptography = ">=45.0.6,<46.0.0"
dataclasses-json = ">=0.6.7,<1.0.0"
debtcollector = ">=3.0.0,<4.0.0"
decorator = ">=5.2.1,<6.0.0"
distro = ">=1.9.0,<2.0.0"
dnspython = ">=2.7.0,<3.0.0"
dogpile-cache = ">=1.4.0,<2.0.0"
eval-type-backport = ">=0.2.2,<1.0.0"
eventlet = ">=0.40.2,<1.0.0"
fasteners = ">=0.19,<1.0.0"
filelock = ">=3.18.0,<4.0.0"
frozenlist = ">=1.7.0,<2.0.0"
fsspec = ">=2025.7.0,<2026.0.0"
futurist = ">=3.2.0,<4.0.0"
greenlet = ">=3.2.3,<4.0.0"
h11 = ">=0.16.0,<1.0.0"
httpcore = ">=1.0.9,<2.0.0"
httpx-sse = ">=0.4.1,<1.0.0"
huggingface-hub = ">=0.34.3,<1.0.0"
idna = ">=3.10,<4.0.0"
importlib-metadata = ">=8.7.0,<9.0.0"
invoke = ">=2.2.0,<3.0.0"
iso8601 = ">=2.1.0,<3.0.0"
isodate = ">=0.7.2,<1.0.0"
itsdangerous = ">=2.2.0,<3.0.0"
jinja2 = ">=3.1.6,<4.0.0"
jiter = ">=0.10.0,<1.0.0"
jsonpatch = ">=1.33,<2.0.0"
jsonpointer = ">=3.0.0,<4.0.0"
jsonschema = ">=4.25.0,<5.0.0"
jsonschema-specifications = ">=2025.4.1,<2026.0.0"
keystoneauth1 = ">=5.11.1,<6.0.0"
keystonemiddleware = ">=10.11.0,<11.0.0"
kombu = ">=5.5.4,<6.0.0"
langchain-text-splitters = ">=0.3.9,<0.4.0"
langgraph-checkpoint = "==2.1.1"
langgraph-prebuilt = "==0.6.3"
langgraph-sdk = "==0.2.0"
langsmith = ">=0.4.13,<1.0.0"
mako = ">=1.3.10,<2.0.0"
markupsafe = ">=3.0.2,<4.0.0"
marshmallow = ">=3.26.1,<4.0.0"
mcp = ">=1.4.1,<1.7"
mistral = ">=20.0.0,<21.0.0"
mistral-lib = ">=3.4.0,<4.0.0"
msal = ">=1.33.0,<2.0.0"
msal-extensions = ">=1.3.1,<2.0.0"
msgpack = ">=1.1.1,<2.0.0"
multidict = ">=6.6.3,<7.0.0"
mypy-extensions = ">=1.1.0,<2.0.0"
netaddr = ">=1.3.0,<2.0.0"
networkx = ">=3.5,<4.0.0"
numpy = ">=2.3.2,<3.0.0"
ollama = ">=0.5.2,<1.0.0"
openai = ">=1.99.1,<2.0.0"
opentelemetry-api = ">=1.36.0,<2.0.0"
ormsgpack = ">=1.10.0,<2.0.0"
os-service-types = ">=1.8.0,<2.0.0"
oslo-cache = ">=3.11.0,<4.0.0"
oslo-concurrency = ">=7.1.0,<8.0.0"
oslo-config = ">=10.0.0,<11.0.0"
oslo-context = ">=6.0.0,<7.0.0"
oslo-db = ">=17.3.0,<18.0.0"
oslo-i18n = ">=6.5.1,<7.0.0"
oslo-log = ">=7.2.0,<8.0.0"
oslo-messaging = ">=17.1.0,<18.0.0"
oslo-metrics = ">=0.12.0,<1.0.0"
oslo-middleware = ">=6.6.0,<7.0.0"
oslo-policy = ">=4.5.1,<5.0.0"
oslo-serialization = ">=5.7.0,<6.0.0"
oslo-service = ">=4.2.2,<5.0.0"
oslo-utils = ">=9.0.0,<10.0.0"
osprofiler = ">=4.3.0,<5.0.0"
packaging = ">=25.0,<26.0.0"
paramiko = ">=4.0.0,<5.0.0"
passlib = ">=1.7.4,<2.0.0"
paste = ">=3.10.1,<4.0.0"
pastedeploy = ">=3.1.0,<4.0.0"
pbr = ">=6.1.1,<7.0.0"
pecan = ">=1.7.0,<2.0.0"
pgvector = ">=0.3.6,<1.0.0"
pillow = ">=11.3.0,<12.0.0"
ply = ">=3.11,<4.0.0"
prettytable = ">=3.16.0,<4.0.0"
prometheus-client = ">=0.22.1,<1.0.0"
propcache = ">=0.3.2,<1.0.0"
psutil = ">=7.0.0,<8.0.0"
pycadf = ">=4.0.1,<5.0.0"
pycparser = ">=2.22,<3.0.0"
pydantic-core = ">=2.33.2,<3.0.0"
pynacl = ">=1.5.0,<2.0.0"
pyparsing = ">=3.2.3,<4.0.0"
python-dateutil = ">=2.9.0,<3.0.0"
python-keystoneclient = ">=5.6.0,<6.0.0"
pytz = ">=2025.2,<2026.0.0"
pywin32 = {version = ">=311,<312", markers = "sys_platform == 'win32'"}
pyyaml = ">=6.0.2,<7.0.0"
referencing = ">=0.36.2,<1.0.0"
regex = ">=2025.7.34,<2026.0.0"
repoze-lru = ">=0.7,<1.0.0"
requests = ">=2.32.4,<3.0.0"
requests-toolbelt = ">=1.0.0,<2.0.0"
rfc3986 = ">=2.0.0,<3.0.0"
routes = ">=2.5.1,<3.0.0"
rpds-py = ">=0.27.0,<1.0.0"
simplegeneric = ">=0.8.1,<1.0.0"
six = ">=1.17.0,<2.0.0"
sniffio = ">=1.3.1,<2.0.0"
soupsieve = ">=2.7,<3.0.0"
statsd = ">=4.0.1,<5.0.0"
stevedore = ">=5.4.1,<6.0.0"
tenacity = ">=9.1.2,<10.0.0"
testresources = ">=2.0.2,<3.0.0"
testscenarios = ">=0.5.0,<1.0.0"
testtools = ">=2.7.2,<3.0.0"
tiktoken = ">=0.10.0,<1.0.0"
tokenizers = ">=0.21.4,<1.0.0"
tooz = ">=7.0.0,<8.0.0"
tqdm = ">=4.67.1,<5.0.0"
typing-inspect = ">=0.9.0,<1.0.0"
typing-inspection = ">=0.4.1,<1.0.0"
typing-extensions = ">=4.14.1,<5.0.0"
tzdata = ">=2025.2,<2026.0.0"
urllib3 = ">=2.5.0,<3.0.0"
vine = ">=5.1.0,<6.0.0"
voluptuous = ">=0.15.2,<1.0.0"
wcwidth = ">=0.2.13,<1.0.0"
webob = ">=1.8.9,<2.0.0"
werkzeug = ">=3.1.3,<4.0.0"
wrapt = ">=1.17.2,<2.0.0"
wsme = ">=0.12.1,<1.0.0"
xxhash = ">=3.5.0,<4.0.0"
yappi = ">=1.6.10,<2.0.0"
yaql = ">=3.1.0,<4.0.0"
yarl = ">=1.20.1,<2.0.0"
zipp = ">=3.23.0,<4.0.0"
zstandard = ">=0.23.0,<1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
