[tool.poetry]
name = "ai-core-tools"
version = "0.3.15"
description = "Mattin AI is a comprehensive AI toolbox that provides a wide range of artificial intelligence capabilities and tools."
authors = ["Aritz Galdos", "Mikel Lonbide"]
readme = "README.md"
license = "MPL-2.0"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
python-dotenv = ">=1.0.1,<2.0.0"
psycopg = ">=3.2.9,<4.0.0"
psycopg2-binary = ">=2.9.0,<3.0.0"
langchain-openai = ">=1.1.0,<2.0.0"
langchain = ">=1.2.0,<2.0.0"
pdf2image = ">=1.17.0,<2.0.0"
pypdf = ">=5.2.0,<6.0.0"
langchain-anthropic = ">=1.3.0,<2.0.0"
langchain-community = ">=0.4.0,<1.0.0"
langchain-postgres = ">=0.0.17,<0.1.0"
authlib = ">=1.4.0,<2.0.0"
deprecation = ">=2.1.0,<3.0.0"
langchain-mistralai = ">=1.1.0,<2.0.0"
mistralai = ">=1.5.0,<2.0.0"
beautifulsoup4 = ">=4.13.3,<5.0.0"
langchain-ollama = ">=1.0.0,<2.0.0"
google-genai = ">=1.56.0,<2.0.0"
langchain-google-genai = ">=4.0.0,<5.0.0"
langchain-mcp-adapters = ">=0.2.0,<0.3.0"
toml = ">=0.10.2,<0.11.0"
langgraph = ">=1.0.0,<2.0.0"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"
scalar-fastapi = ">=1.4.4,<2.0.0"
SQLAlchemy = ">=2.0.42,<3.0.0"
alembic = ">=1.16.4,<2.0.0"
psycopg-binary = ">=3.2.9,<4.0.0"
psycopg-pool = ">=3.2.6,<4.0.0"
pydantic = ">=2.11.7,<3.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"
orjson = ">=3.11.1,<4.0.0"
aiohttp = ">=3.12.15,<4.0.0"
httpx = ">=0.28.1,<0.29.0"
starlette = ">=0.47.2,<0.48.0"
sse-starlette = ">=3.0.2,<4.0.0"
pyjwt = ">=2.8.0,<3.0.0"
langchain-azure-ai = ">=1.0.0,<2.0.0"
python-multipart = ">=0.0.6,<0.1.0"
aiohappyeyeballs = ">=2.6.1,<3.0.0"
aiosignal = ">=1.4.0,<2.0.0"
annotated-types = ">=0.7.0,<1.0.0"
anthropic = ">=0.61.0,<1.0.0"
anyio = ">=4.10.0,<5.0.0"
asyncpg = ">=0.30.0,<1.0.0"
attrs = ">=25.3.0,<26.0.0"
azure-ai-agents = ">=1.1.0,<2.0.0"
azure-ai-inference = ">=1.0.0b9,<2.0.0"
azure-ai-projects = ">=1.0.0b12,<2.0.0"
azure-common = ">=1.1.28,<2.0.0"
azure-core = ">=1.35.0,<2.0.0"
azure-core-tracing-opentelemetry = ">=1.0.0b12,<2.0.0"
azure-cosmos = ">=4.14.0b1,<5.0.0"
azure-identity = ">=1.23.1,<2.0.0"
azure-search-documents = ">=11.5.3,<12.0.0"
azure-storage-blob = ">=12.26.0,<13.0.0"
bcrypt = ">=4.3.0,<5.0.0"
blinker = ">=1.9.0,<2.0.0"
bs4 = ">=0.0.2,<1.0.0"
cachetools = ">=6.1.0,<7.0.0"
certifi = ">=2025.8.3,<2026.0.0"
cffi = ">=1.17.1,<2.0.0"
charset-normalizer = ">=3.4.2,<4.0.0"
click = ">=8.2.1,<9.0.0"
colorama = ">=0.4.6,<1.0.0"
cryptography = ">=45.0.6,<46.0.0"
dataclasses-json = ">=0.6.7,<1.0.0"
decorator = ">=5.2.1,<6.0.0"
distro = ">=1.9.0,<2.0.0"
dnspython = ">=2.7.0,<3.0.0"
eval-type-backport = ">=0.2.2,<1.0.0"
filelock = ">=3.18.0,<4.0.0"
frozenlist = ">=1.7.0,<2.0.0"
fsspec = ">=2025.7.0,<2026.0.0"
h11 = ">=0.16.0,<1.0.0"
httpcore = ">=1.0.9,<2.0.0"
httpx-sse = ">=0.4.1,<1.0.0"
huggingface-hub = ">=0.34.3,<1.0.0"
idna = ">=3.10,<4.0.0"
importlib-metadata = ">=8.7.0,<9.0.0"
isodate = ">=0.7.2,<1.0.0"
itsdangerous = ">=2.2.0,<3.0.0"
jinja2 = ">=3.1.6,<4.0.0"
jiter = ">=0.10.0,<1.0.0"
jsonpatch = ">=1.33,<2.0.0"
jsonpointer = ">=3.0.0,<4.0.0"
jsonschema = ">=4.25.0,<5.0.0"
jsonschema-specifications = ">=2025.4.1,<2026.0.0"
langchain-text-splitters = ">=1.1.0,<2.0.0"
langgraph-checkpoint = ">=2.1.2,<4.0.0"
langgraph-prebuilt = ">=1.0.0,<2.0.0"
langgraph-sdk = ">=0.2.0,<1.0.0"
langsmith = ">=0.4.13,<1.0.0"
mako = ">=1.3.10,<2.0.0"
markupsafe = ">=3.0.2,<4.0.0"
marshmallow = ">=3.26.1,<4.0.0"
mcp = ">=1.9.2,<2.0.0"
mistral = ">=20.0.0,<21.0.0"
mistral-lib = ">=3.4.0,<4.0.0"
msal = ">=1.33.0,<2.0.0"
msal-extensions = ">=1.3.1,<2.0.0"
multidict = ">=6.6.3,<7.0.0"
mypy-extensions = ">=1.1.0,<2.0.0"
networkx = ">=3.5,<4.0.0"
numpy = ">=2.3.2,<3.0.0"
pandas = ">=2.0.0,<3.0.0"
openpyxl = ">=3.1.0,<4.0.0"
ollama = ">=0.5.2,<1.0.0"
openai = ">=1.99.1,<2.0.0"
opentelemetry-api = ">=1.36.0,<2.0.0"
ormsgpack = ">=1.10.0,<2.0.0"
packaging = ">=25.0,<26.0.0"
passlib = ">=1.7.4,<2.0.0"
pgvector = ">=0.3.6,<1.0.0"
pillow = ">=11.3.0,<12.0.0"
prometheus-client = ">=0.22.1,<1.0.0"
propcache = ">=0.3.2,<1.0.0"
psutil = ">=7.0.0,<8.0.0"
pycparser = ">=2.22,<3.0.0"
pydantic-core = ">=2.33.2,<3.0.0"
pyparsing = ">=3.2.3,<4.0.0"
python-dateutil = ">=2.9.0,<3.0.0"
pytz = ">=2025.2,<2026.0.0"
pywin32 = {version = ">=311,<312", markers = "sys_platform == 'win32'"}
pyyaml = ">=6.0.2,<7.0.0"
referencing = ">=0.36.2,<1.0.0"
regex = ">=2025.7.34,<2026.0.0"
requests = ">=2.32.4,<3.0.0"
requests-toolbelt = ">=1.0.0,<2.0.0"
rfc3986 = ">=2.0.0,<3.0.0"
rpds-py = ">=0.27.0,<1.0.0"
six = ">=1.17.0,<2.0.0"
sniffio = ">=1.3.1,<2.0.0"
soupsieve = ">=2.7,<3.0.0"
tenacity = ">=9.1.2,<10.0.0"
tiktoken = ">=0.10.0,<1.0.0"
tokenizers = ">=0.21.4,<1.0.0"
tqdm = ">=4.67.1,<5.0.0"
typing-inspect = ">=0.9.0,<1.0.0"
typing-inspection = ">=0.4.1,<1.0.0"
typing-extensions = ">=4.14.1,<5.0.0"
tzdata = ">=2025.2,<2026.0.0"
urllib3 = ">=2.5.0,<3.0.0"
wcwidth = ">=0.2.13,<1.0.0"
wrapt = ">=1.17.2,<2.0.0"
xxhash = ">=3.5.0,<4.0.0"
yarl = ">=1.20.1,<2.0.0"
zipp = ">=3.23.0,<4.0.0"
zstandard = ">=0.23.0,<1.0.0"
langgraph-checkpoint-postgres = ">=3.0.0,<4.0.0"
lks-idprovider-fastapi = "^0.1.0"
lks-idprovider-entraid = "^0.1.3"
yt-dlp = ">=2024.0.0"
pydub = ">=0.25.1"
ffmpeg-python = "^0.2.0"

[tool.poetry.scripts]
dev = "uvicorn backend.main:app --reload --port 8000"

[tool.poetry.group.test.dependencies]
pytest = ">=8.0.0,<9.0.0"
pytest-asyncio = ">=0.23.0,<1.0.0"
pytest-cov = ">=5.0.0,<6.0.0"
pytest-mock = ">=3.12.0,<4.0.0"
pytest-env = ">=1.1.0,<2.0.0"
factory-boy = ">=3.3.0,<4.0.0"
faker = ">=24.0.0,<30.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["backend"]
env = [
    "AICT_LOGIN=FAKE",
    "SQLALCHEMY_DATABASE_URI=postgresql://test_user:test_pass@localhost:5433/test_db",
    "SECRET_KEY=test-secret-key-32chars-minimum-ok",
    "AICT_OMNIADMINS=admin@test.com",
    "AICT_MODE=SELF-HOSTED",
    "FRONTEND_URL=http://localhost:5173",
]

[tool.coverage.run]
source = ["backend"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "debugpy (>=1.8.20,<2.0.0)"
]
